# scryer-orchestrator

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/routes/: events.py  hooks.py  messaging.py  meta.py  processes.py  skills.py  workflows.py
app/schemas/: hook.py  process.py  skill.py  workflow.py
app/services/: errors.py  event_log.py  execution.py  git.py  hook_assets.py  hooks.py  messaging.py  notifications.py  paths.py  processes.py  runtime.py  skills.py  workflows.py
data/: event_log.db
docs/: handoff.md  orchestration-rebuild.md  orchestration_hooks.md  release-checklist.md  scryer-hook-helper-architecture.md
tests/: conftest.py  test_live_dummy_workflow_startup.py  test_phase_dispatch.py  test_post_workflow_hook.py  test_pre_step_step_integration.py  test_pre_workflow_hook.py  test_process_notifications.py  test_scryer_git.py  test_scryer_resolver.py  test_skills_service.py  test_step_hook.py
